--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,16 +101,26 @@ jobs:
           python-version: "3.7"
           architecture: x64
 
-      - name: Build both 32-bit and 64-bit versions
+      - name: Build C library (32-bit and 64-bit)
         shell: powershell
         run: |
           cmake -G "Visual Studio 17 2022" -A Win32 -S . -B "build32" -DUSE_FAST_MATH=ON -DUSE_FAST_TANH=ON -DCMAKE_INSTALL_PREFIX:FILEPATH=../dist32
           cmake --build build32 --config Release --target Install
           cmake -G "Visual Studio 17 2022" -A x64 -S . -B "build64" -DUSE_FAST_MATH=ON -DUSE_FAST_TANH=ON -DCMAKE_INSTALL_PREFIX:FILEPATH=../dist64
           cmake --build build64 --config Release --target Install
+
+      - name: Install Python dependencies
+        shell: powershell
+        run: |
+          & "${{ steps.python_x86.outputs.python-path }}" pip install wheel>=0.35.0
+          & "${{ steps.python_x64.outputs.python-path }}" pip install wheel>=0.35.0
+
+      - name: Build Python Wheels
+        shell: powershell
+        run: |
           cd wrappers/python
-          & "${{ steps.python_x86.outputs.python-path }}" setup.py build_ext --library-dirs=../../dist32/lib --include-dirs=../../include bdist_wheel --py-limited-api=cp36
-          & "${{ steps.python_x64.outputs.python-path }}" setup.py build_ext --library-dirs=../../dist64/lib --include-dirs=../../include bdist_wheel --py-limited-api=cp36
+          & "${{ steps.python_x86.outputs.python-path }}" setup.py build_ext --library-dirs=../../dist32/lib --include-dirs=../../include bdist_wheel --py-limited-api=cp37
+          & "${{ steps.python_x64.outputs.python-path }}" setup.py build_ext --library-dirs=../../dist64/lib --include-dirs=../../include bdist_wheel --py-limited-api=cp37
 
 
   # test:
