--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,17 +51,16 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build C Library
-        # GLIBC 2.31 broke compatibility in that __exp_finite is no longer
-        # defined, i.e. building with fast-math means it won't run on modern
-        # platforms. We therefore disable this for Linux wheels.
+        # GLIBC 2.31 broke compatibility in that a.o. __exp_finite is no
+        # longer defined, i.e. building with -ffast-math on the manylinux2014
+        # image means it won't run on modern platforms. We therefore disable
+        # this for Linux wheels.
         # See e.g. https://stackoverflow.com/questions/63261220/link-errors-with-ffast-math-ffinite-math-only-and-glibc-2-31
         run: |
           mkdir build
           cd build
           cmake -DUSE_FAST_MATH=OFF -DUSE_FAST_TANH=ON -DCMAKE_INSTALL_PREFIX=../dist -DCMAKE_BUILD_TYPE=Release ..
           make -j4 install
-        env:
-          LDFLAGS: -static -static-libgcc -static-libstdc++
       - name: Build Python Wheel
         run: |
           cd wrappers/python
