--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -184,6 +184,8 @@ jobs:
 
   package:
     needs:
+      - build-linux
+      - build-windows
       - test-fortran
       - test-python
     runs-on: ubuntu-latest
@@ -191,12 +193,11 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: true
-    - run: ls -alh
     # Download all artifacts
     - uses: actions/download-artifact@v3
       with:
         path: artifacts/
-    - run: ls -alh
+    - run: ls -R artifacts/
 
   # coverage:
   #   needs: test
