--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -148,7 +148,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/download-artifact@v3
       with:
-        path: artifacts/
+        path: artifacts
     - name: Package Excel
       run: |
         mkdir excel-build
