--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -148,7 +148,12 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/download-artifact@v3
       with:
-        path: artifacts
+        name: c-build-windows-x64
+        path: artifacts/
+    - uses: actions/download-artifact@v3
+      with:
+        name: c-build-windows-x86
+        path: artifacts2/
     - name: Package Excel
       run: |
         mkdir excel-build
